--- a/_config.yml
+++ b/_config.yml
@@ -20,15 +20,10 @@ title                    : "Joe Cipolla"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "Joe Cipolla"
-<<<<<<< HEAD
 description              : "A collection of some of my work in data science."
-url                      : "https://joe-cipolla.github.io/" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-=======
-description              : "An amazing website."
-url                      : https://joe-cipolla.github.io
->>>>>>> 3b6230292578446da5fefaf59be334bd645803ce
+url                      : https://joe-cipolla.github.io/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
-repository               : "joe-cipolla/joe-cipolla.github.io" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
+repository               : joe-cipolla/joe-cipolla.github.io # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
