--- a/_config.yml
+++ b/_config.yml
@@ -10,8 +10,8 @@ j# Welcome to Jekyll!
 # Review documentation to determine if you should use `theme` or `remote_theme`
 # https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/#installing-the-theme
 
-theme                  : "minimal-mistakes-jekyll"
-# remote_theme             : "mmistakes/minimal-mistakes@4.17.1"
+# theme                  : "minimal-mistakes-jekyll"
+remote_theme             : "mmistakes/minimal-mistakes@4.17.1"
 minimal_mistakes_skin    : "mint" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 # Site Settings
@@ -21,9 +21,9 @@ title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "Joe Cipolla"
 description              : "A collection of some of my work in data science."
-url                      : https://joe-cipolla.github.io/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-baseurl                  : # the subpath of your site, e.g. "/blog"
-repository               : joe-cipolla/joe-cipolla.github.io # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
+url                      : "https://joe-cipolla.github.io/"" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+baseurl                  : "/joe-cipolla.github.io" # the subpath of your site, e.g. "/blog"
+repository               : "joe-cipolla/joe-cipolla.github.io" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
@@ -111,7 +111,7 @@ author:
   avatar           : /assets/profile_pic__circle.jpg
   bio              : "deliberately practicing data science, musicianship, and peacemaking"
   location         : "Houston, TX"
-  email            : JLCipolla@gmail.com
+  # email            : JLCipolla@gmail.com
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
@@ -123,7 +123,7 @@ author:
       icon: "fab fa-fw fa-twitter-square"
       # url: "https://twitter.com/"
     - label: "Linkedin"
-      icon: "fab fa-fw fa-linkedin-square"
+      icon: "fab fa-fw fa-linkedin"
       url: "https://www.linkedin.com/in/jlcipolla/"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
@@ -220,7 +220,7 @@ sass:
 permalink: /:categories/:title/
 paginate: 5 # amount of posts to show
 paginate_path: /page:num/
-timezone: # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
+timezone: America/Chicago # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 
 
 # Plugins (previously gems:)
