--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,7 +3,7 @@ main:
   - title: "About"
     url: /about/
   - title: "Blog"
-    url: /page-archive/
+    url: /blog/
   - title: "CV"
     url: /cv/
   # - title: "About"
